--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "d3": "^5.7.0",
+    "d3-hexbin": "^0.2.2",
+    "d3-shotchart": "0.0.2",
     "nba": "^4.5.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
