--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.10.1",
     "d3": "^5.7.0",
     "d3-hexbin": "^0.2.2",
     "d3-shotchart": "0.0.2",
+    "lodash": "^4.17.11",
     "nba": "^4.5.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
